add main section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header class="header1">
         <nav class="nav1">
@@ -21,5 +23,19 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section class="section1">
+            <div class="section-33">
+                <h3 class="section-heading1">See It in Action</h3>
+                <p class="section-pas1">Explore the live preview and imagine your brand in this bold new look.</p>
+                <ul class="section-button">
+                    <li><a href=""><button class="section-button1">Launch Live Preview</button></a></li>
+                </ul>
+            </div>
+            <div class="section-img">
+                <img src="/Assets/wc-mini.png" alt="">
+            </div>
+        </section>
 </body>
+
 </html>
