some error chnages

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 </div>
                 <div class="reviewer">
-                    <img class="img3" src="Assets/avatar.png" alt="">
+                    <img class="img3" src="/Assets/avatar.png" alt="">
                     <div class="j22">
                         <h5 class="rev">Reviewer Name</h5>
                         <p class="date">Date</p>
